--- a/client/src/translation/en.json
+++ b/client/src/translation/en.json
@@ -1,5 +1,6 @@
 {
   "navbar": {
+    "name": "Everest Community Learning Center",
     "home": "Home",
     "services": "Our Services",
     "goals": "Our Goals",
