--- a/client/src/translation/np.json
+++ b/client/src/translation/np.json
@@ -1,5 +1,6 @@
 {
   "navbar": {
+    "name": "एभरेस्ट सामुदायिक सिकाइ केन्द्र",
     "home": "गृहपृष्ठ",
     "services": "हाम्रा सेवाहरू",
     "goals": "हाम्रा लक्ष्यहरू",
