--- a/client/src/translation/en.json
+++ b/client/src/translation/en.json
@@ -116,6 +116,7 @@
   },
   "contact": {
     "name": "Name",
+    "address": "Address",
     "email": "Email",
     "phone": "Phone",
     "message": "Message",
